// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`tailwind-fluid-type options DEFAULT_OPTIONS not change 1`] = `
{
  "settings": {
    "fontSizeMax": 1.25,
    "fontSizeMin": 1.125,
    "ratioMax": 1.2,
    "ratioMin": 1.125,
    "screenMax": 96,
    "screenMin": 20,
    "unit": "rem",
  },
  "values": {
    "2xl": {
      "fontSize": 3,
      "lineHeight": 1.2,
    },
    "2xs": {
      "fontSize": -3,
      "lineHeight": 1.6,
    },
    "3xl": {
      "fontSize": 4,
      "lineHeight": 1.2,
    },
    "4xl": {
      "fontSize": 5,
      "lineHeight": 1.1,
    },
    "5xl": {
      "fontSize": 6,
      "lineHeight": 1.1,
    },
    "6xl": {
      "fontSize": 7,
      "lineHeight": 1.1,
    },
    "7xl": {
      "fontSize": 8,
      "lineHeight": 1,
    },
    "8xl": {
      "fontSize": 9,
      "lineHeight": 1,
    },
    "9xl": {
      "fontSize": 10,
      "lineHeight": 1,
    },
    "base": {
      "fontSize": 0,
      "lineHeight": 1.6,
    },
    "lg": {
      "fontSize": 1,
      "lineHeight": 1.6,
    },
    "sm": {
      "fontSize": -1,
      "lineHeight": 1.6,
    },
    "xl": {
      "fontSize": 2,
      "lineHeight": 1.2,
    },
    "xs": {
      "fontSize": -2,
      "lineHeight": 1.6,
    },
  },
}
`;

exports[`tailwind-fluid-type options TAILWIND_FLUID_TYPES_SIZES not change 1`] = `
[
  "2xl",
  "2xs",
  "3xl",
  "4xl",
  "5xl",
  "6xl",
  "7xl",
  "8xl",
  "9xl",
  "base",
  "lg",
  "sm",
  "xl",
  "xs",
]
`;

exports[`tailwind-fluid-type options parseOptions should works as expected when provide settings 1`] = `
{
  "settings": {
    "extendValues": undefined,
    "fontSizeMax": 3,
    "fontSizeMin": 1.5,
    "ratioMax": 1.8,
    "ratioMin": 1.2,
    "screenMax": 1440,
    "screenMin": 360,
    "unit": "em",
  },
  "values": {},
}
`;

exports[`tailwind-fluid-type options parseOptions should works as expected when provide settings and extends is true 1`] = `
{
  "settings": {
    "extendValues": true,
    "fontSizeMax": 1.25,
    "fontSizeMin": 1.125,
    "ratioMax": 1.2,
    "ratioMin": 1.125,
    "screenMax": 96,
    "screenMin": 20,
    "unit": "rem",
  },
  "values": {
    "2xl": {
      "fontSize": 3,
      "lineHeight": 1.2,
    },
    "2xs": {
      "fontSize": -3,
      "lineHeight": 1.6,
    },
    "3xl": {
      "fontSize": 4,
      "lineHeight": 1.2,
    },
    "4xl": {
      "fontSize": 5,
      "lineHeight": 1.1,
    },
    "5xl": {
      "fontSize": 6,
      "lineHeight": 1.1,
    },
    "6xl": {
      "fontSize": 7,
      "lineHeight": 1.1,
    },
    "7xl": {
      "fontSize": 8,
      "lineHeight": 1,
    },
    "8xl": {
      "fontSize": 9,
      "lineHeight": 1,
    },
    "9xl": {
      "fontSize": 10,
      "lineHeight": 1,
    },
    "base": {
      "fontSize": 0,
      "lineHeight": 1.6,
    },
    "lg": {
      "fontSize": 1,
      "lineHeight": 1.6,
    },
    "sm": {
      "fontSize": 9999,
      "lineHeight": 1.6,
    },
    "xl": {
      "fontSize": 2,
      "lineHeight": 1.2,
    },
    "xs": {
      "fontSize": -2,
      "lineHeight": 1.6,
    },
  },
}
`;

exports[`tailwind-fluid-type options parseOptions should works as expected when provide settings and extends is false 1`] = `
{
  "settings": {
    "extendValues": false,
    "fontSizeMax": 1.25,
    "fontSizeMin": 1.125,
    "ratioMax": 1.2,
    "ratioMin": 1.125,
    "screenMax": 96,
    "screenMin": 20,
    "unit": "rem",
  },
  "values": {
    "sm": {
      "fontSize": 8888,
      "letterSpacing": 666,
      "lineHeight": 777,
    },
  },
}
`;
